--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -24,14 +24,16 @@ frame-opacity = 1.0;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 inactive-dim = 0.2;
-# inactive-dim-fixed = true;
-# blur-background = true;
-# blur-background-frame = true;
-blur-kern = "3x3box"
-# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
-# blur-background-fixed = true;
-blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
-# opacity-rule = [ "80:class_g = 'URxvt'" ];
+inactive-dim-fixed = true;
+
+blur-background = true;
+blur-method = "kawase";
+blur-strength = 12;
+blur-background-fixed = true;
+#compton --blur-background --blur-method kawase --blur-strength 8 --backend glx --config ~/.config/compton/compton.conf
+blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'"];
+
+opacity-rule = [ "65:class_g = 'Thunar'", "85:class_g *= 'code'", "85:class_g = 'Alacritty'", "85:class_g = 'Spotify'"];
 
 # Fading
 fading = true;
@@ -42,7 +44,7 @@ fade-out-step = 0.03;
 fade-exclude = [ ];
 
 # Other
-backend = "xr_glx_hybrid"
+backend = "glx"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
