--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -33,7 +33,7 @@ blur-background-fixed = true;
 #compton --blur-background --blur-method kawase --blur-strength 8 --backend glx --config ~/.config/compton/compton.conf
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'"];
 
-opacity-rule = [ "65:class_g = 'Thunar'", "90:class_g *= 'code'", "85:class_g = 'Alacritty'", "85:class_g = 'Spotify'"];
+opacity-rule = [ "65:class_g = 'Thunar'", "90:class_g *= 'code'", "85:class_g = 'Alacritty'", "85:class_g = 'Spotify'", "90:class_g = 'Dunst'"];
 
 # Fading
 fading = true;
