--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -61,18 +61,18 @@ cscale=ewa_lanczossharp
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
 # with some drivers and desktop environments.
-#video-sync=display-resample
+video-sync=display-resample
 
 # Enable hardware decoding if available. Often, this does not work with all
 # video outputs, but should work well with default settings on most systems.
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
-#hwdec=auto
+hwdec=auto
 
 ##################
 # audio settings #
 ##################
-volume-max=150
+volume-max=200
 # Specify default audio device. You can list devices with: --audio-device=help
 # The option takes the device string (the stuff between the '...').
 #audio-device=alsa/default
@@ -91,6 +91,9 @@ volume-max=150
 # other settings #
 ##################
 
+# Remember last position
+save-position-on-quit
+
 # Pretend to be a web browser. Might fix playback with some streaming sites,
 # but also will break with shoutcast streams.
 #user-agent="Mozilla/5.0"
@@ -98,7 +101,7 @@ volume-max=150
 # cache settings
 #
 # Use 150MB input cache by default. The cache is enabled for network streams only.
-#cache-default=153600
+
 #
 # Use 150MB input cache for everything, even local files.
 #cache=153600
