update kitty: use doom one theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2031,6 +2031,7 @@ map opt+cmd+,    debug_config
 
 # BEGIN_KITTY_THEME
 # Tokyo Night
-include kitty_tokyonight_night.conf
+# include kitty_tokyonight_night.conf
+include Doom_One.conf
 # END_KITTY_THEME
 
