update kitty: set theme to nightfox

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2032,6 +2032,6 @@ map opt+cmd+,    debug_config
 # BEGIN_KITTY_THEME
 # Tokyo Night
 # include kitty_tokyonight_night.conf
-include Doom_One.conf
+include nightfox_kitty.conf
 # END_KITTY_THEME
 
