--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1577,8 +1577,8 @@ map kitty_mod+g show_last_command_output
 
 #: New window
 
-map kitty_mod+enter new_window
-map cmd+enter       new_window
+map kitty_mod+enter new_window_with_cwd
+map cmd+enter       new_window_with_cwd
 
 #::  You can open a new window running an arbitrary program, for
 #::  example::
@@ -1719,8 +1719,8 @@ map ctrl+shift+tab previous_tab
 
 #: New tab
 
-map kitty_mod+t new_tab
-map cmd+t       new_tab
+map kitty_mod+t new_tab_with_cwd
+map cmd+t       new_tab_with_cwd
 
 #: Close tab
 
