--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -701,7 +701,7 @@ placement_strategy center
 #: this option. Using a value of center means the cell area will be
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
-# active_border_color #00ff00
+active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
