--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set-option -g prefix 'C-a'
 set-window-option -g mode-keys vi
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+setw -g mouse on
 
 # to solve escape delay in neovim
 set -sg escape-time 0
