--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,5 +5,8 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 setw -g mouse on
 
+# make current window bold
+set-window-option -g window-status-current-style fg=darkblue
+
 # to solve escape delay in neovim
 set -sg escape-time 0
